[FIX] mail: DiscussSidebar hover doesn't flicker on mouse-hovering
Mouse-hovering items when discuss sidebar is compact result in some
style flickering on im status icon.

This happens because the items are button and they need `bg-inherit`.
Due to CSS specificity, however, the classname is not enough,
so we need `!important` in CSS, which is what this commit does to
fix the issue.

closes odoo/odoo#182394

--- a/addons/mail/static/src/discuss/core/public_web/discuss_sidebar_categories.scss
+++ b/addons/mail/static/src/discuss/core/public_web/discuss_sidebar_categories.scss
@@ -29,6 +29,7 @@ $o-mail-DiscussSidebarChannel-borderOpacity: .1;
 
 .o-mail-DiscussSidebar-item {
     line-height: 2; // so that same height as actions
+    background-color: inherit !important;
 
     &:hover .o-mail-DiscussSidebarChannel-commands {
         display: flex !important;
